[package]
name = "s3uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
rust-s3 = { version = "0.33.0", features = ["sync", "sync-native-tls"], default-features = false }
